fix: text-align

--- a/src/styles/metodos/payments.styl
+++ b/src/styles/metodos/payments.styl
@@ -192,7 +192,11 @@
       color black
       font-size 1rem
       margin 2rem auto
+      text-align left
       position static
+
+    &__creditText
+      margin 2rem 1rem
 
     &__picture-debt
       display none
@@ -208,6 +212,7 @@
 
     #servivales
       padding 0
+
 
 .modal
   &__title
